kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: didlint
spec:
  replicas: 2
  selector:
    matchLabels:
      app: didlint
  template:
    metadata:
      labels:
        app: didlint
    spec:
      containers:
      - name: didlint
        image: oydeu/didlint:latest
        ports:
        - containerPort: 3000
